# rubber-duck-mcp

./: .gitignore  Cargo.toml  README.md  REVIEW-claude-opus4-5.md  todo.1.json  todo.12.json  todo.13.json  todo.14.json  todo.16.json  todo.17.json  todo.18.json  todo.19.json  todo.2.json  todo.3.json  todo.4.json  todo.5.json  todo.6.json  todo.7.json  todo.8.json  todo.json
.gemini/: settings.json
data/: web_log.txt  world_state.json
docs/: GDD.md  REALISM_GDD.md
docs/todo/: todo.0.json  todo.10.json  todo.11.json  todo.15.json  todo.20.json  todo.md
npm/: install.js  package.json
scripts/: npx-wait.sh  release.sh
src/: main.rs
src/actions/: crafting.rs  interaction.rs  mod.rs  movement.rs
src/descriptions/: generator.rs
src/entity/: blueprint.rs  body.rs  book.rs  mod.rs  objects.rs  player.rs  trees.rs  wildlife.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src/persistence/: state.rs
src/world/: map.rs  mod.rs  object.rs  simulation.rs  time.rs  weather.rs
