[package]
name = "rubber-duck-mcp"
version = "0.1.10"
edition = "2021"
description = "A text-based healing MUD nature simulation as an MCP server"
authors = ["2lab.ai"]
repository = "https://github.com/2lab-ai/rubber-duck-mcp"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime for stdio
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random generation for simulation
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for entity IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP server
tiny_http = "0.12"

[profile.release]
opt-level = 3
lto = true

[profile.dist]
inherits = "release"
lto = true

[workspace.metadata.dist]
cargo-dist-version = "0.30.2"
allow-dirty = ["ci"]
ci = "github"
installers = ["shell"]
targets = [
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
